# csuoi

./: .gitmodules  LICENSE  README.md
computer-graphics/: README.md
computer-graphics/assignment_1/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
computer-graphics/assignment_1/headers/: Config.hpp  Cube.hpp  Display.hpp  Effects.hpp  GameManagement.hpp  Keyboard.hpp  Menu.hpp  Mouse.hpp  Point.hpp  TexturesInfo.hpp  Utils.hpp  WindowUtils.hpp
computer-graphics/assignment_1/src/: BraXaPsaIII.cpp  Cube.cpp  Display.cpp  Effects.cpp  GameManagement.cpp  Keyboard.cpp  Menu.cpp  Mouse.cpp  Point.cpp  TexturesInfo.cpp  WindowUtils.cpp
operating-systems/: README.md
operating-systems/assignment_1/: .gitignore  README.md  client.c  common.h  premake5.lua  server.c
security-of-computer-systems-and-networks/: .gitignore  Makefile  README.md  exploit.pl  vulnerable_server.c
security-of-computer-systems-and-networks/assignment_1/: README.md  shell.s  vulnerable_server.c
systems-programming/: .gitignore  README.md  lab1_1.c  lab1_3.c  lab2_2.c  lab2_4.c  lab8_2.c  lab8_3.c  lab8_5.c
